--- a/index.html
+++ b/index.html
@@ -400,5 +400,6 @@
     start();
   </script>
 </body>
+  <script src="script.js"></script>
 </html>
 ```[43dcd9a7-70db-4a1f-b0ae-981daa162054](https://github.com/TaiAiAc/taiaiac_blog.github.io/tree/2d0e91d7de31888b10a81056afc1fc9fff39fb6d/source%2F_posts%2F%E7%A7%BB%E5%8A%A8%E7%AB%AF%2F%E6%8F%92%E4%BB%B6.md?citationMarker=43dcd9a7-70db-4a1f-b0ae-981daa162054 "1")[43dcd9a7-70db-4a1f-b0ae-981daa162054](https://github.com/amitwh/website/tree/d1c735c2eea6a2fcbeb0a323757cd0d958484102/docs%2Flucidlp%2Fheader.php?citationMarker=43dcd9a7-70db-4a1f-b0ae-981daa162054 "2")[43dcd9a7-70db-4a1f-b0ae-981daa162054](https://github.com/MetamediaTechnology/longdo-map-react-native/tree/b29261a2f9b44d6ed7e3bfe3ce5628b773fb53a4/src%2FMapView.js?citationMarker=43dcd9a7-70db-4a1f-b0ae-981daa162054 "3")
